# chem-dcat-ap

./: .copier-answers.yml  .cruft.json  .gitignore  .zenodo.json  404.html  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  SubstanceSampleCharacterizationDataset-001.ttl  chemical_entities_ap.yaml  chemical_reaction_ap.yaml  config.public.mk  config.yaml  dcat_4c_ap.yaml  dcat_ap_linkml.yaml  index.html  justfile  latest  material_entities_ap.yaml  mkdocs.yml  nmr_michi.yaml  pyproject.toml  sitemap.xml  versions.json
.github/: README_for_versioning.md
Activity/: index.html
ActivityOfInterest/: index.html
ActivitySpecification/: index.html
AnalysedData/: index.html
AnalysisDataset/: index.html
Any/: index.html
Attribute/: index.html
AttributeKind/: index.html
Attribution/: index.html
Boolean/: index.html
Catalogue/: index.html
CataloguedResource/: index.html
ChecksumAlgorithm/: index.html
ChemAnalysisDataset/: index.html
ChemicalEntity/: index.html
ChemicalReaction/: index.html
ChemicalSample/: index.html
ChemicalSubstance/: index.html
Concept/: index.html
ConceptScheme/: index.html
Curie/: index.html
DataAnalysis/: index.html
DataCreatingActivity/: index.html
DataService/: index.html
Dataset/: index.html
DatasetCollection/: index.html
DatasetSeries/: index.html
DatasetThemes/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
DefinedTerm/: index.html
Distribution/: index.html
Document/: index.html
Double/: index.html
Duration/: index.html
EntityOfInterest/: index.html
EntityOfInterestTypeEnum/: index.html
Environment/: index.html
FeatureOfInterest/: index.html
Float/: index.html
Frequency/: index.html
Geometry/: index.html
HardwareTool/: index.html
HexBinary/: index.html
IUPACChemicalFormula/: index.html
IUPACName/: index.html
Identifier/: index.html
InChIKey/: index.html
InChi/: index.html
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
Laboratory/: index.html
LinguisticSystem/: index.html
Location/: index.html
MediaTypeOrExtent/: index.html
NFDICatalog/: index.html
NFDIDataset/: index.html
NMRAnalysisDataset/: index.html
NMRAssayEnum/: index.html
NMRDataset/: index.html
NMRSpectralAnalysis/: index.html
NMRSpectroscopy/: index.html
NMRSpectroscopyEnum/: index.html
NMRSpectrum/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
Observation/: index.html
ObservationDataset/: index.html
PeriodOfTime/: index.html
Plan/: index.html
PlanSpecification/: index.html
Policy/: index.html
Procedure/: index.html
ProvenanceStatement/: index.html
QUDTQuantityKindEnum/: index.html
QUDTUnitEnum/: index.html
QualitativeAttribute/: index.html
QuantifiableAttribute/: index.html
QuantitativeAttribute/: index.html
Relationship/: index.html
ResearchActivity/: index.html
ResearchActivitySpecification/: index.html
SMILES/: index.html
(+6022 files in other folders)
