[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "dcat_4c_ap"
description = "This is an extension of the DCAT Application Profile in LinkML. It is intended to be used by NFDI4Chem & NFDI4Cat as a core that can further be extended in profiles to provide domain specific metadata for a dataset."
authors = [
  {name = "Philip Strömert", email = "philip.stroemert@tib.eu"},
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
include = ["README.md", "src/dcat_4c_ap/schema", "project"]

# We can't use caret ^ requirement specifiers here. They are a Poetry speciality.
requires-python = ">=3.9,<4.0"

dynamic = ["version"]

dependencies = [
  "linkml-runtime >=1.8.0",
]

# Ref.: https://python-poetry.org/docs/
# Ref.: https://github.com/mtkennerly/poetry-dynamic-versioning
[tool.poetry]
requires-poetry = ">=2.0"
version = "0.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = ">=1.7.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.group.dev.dependencies]
linkml = ">=1.3.5"
mkdocs-material = ">=8.2.8"
mkdocs-mermaid2-plugin = ">=1.1.1"
jupyter = ">=1.0.0"
mknotebooks = ">= 0.8.0"

# Ref.: https://github.com/codespell-project/codespell
[tool.codespell]
skip = [
  "LICENSE",
  "pyproject.toml",
  "poetry.lock",
  "project/*",
  "src/dcat_4c_ap/datamodel/dcat_4c_ap_pydantic.py",
  "src/dcat_4c_ap/datamodel/dcat_4c_ap.py",
]

# Reminder: words have to be lowercased for the ignore-words-list
ignore-words-list = "linke"
quiet-level = 3

# Ref.: https://github.com/crate-ci/typos (spell checker)
[tool.typos.default.extend-words]
linke = "linke"
[tool.typos.files]
extend-exclude = [
  "LICENSE",
  "poetry.lock",
  "pyproject.toml",
  "project/*",
  "src/dcat_4c_ap/datamodel/dcat_4c_ap_pydantic.py",
  "src/dcat_4c_ap/datamodel/dcat_4c_ap.py",
]
